# crousplay

./: .gitignore  README.md  _deploy_app.sh  deploy.sh  manage.py  pyproject.toml
crousplay/: asgi.py  settings.py  urls.py  wsgi.py
games/: admin.py  models.py  urls.py  views.py
games/management/commands/: setup_fixtures.py  truncate.py
games/migrations/: 0001_initial.py  0002_alter_game_notes_alter_genre_notes.py  0003_game_rules_link.py  0004_alter_ambiance_options_alter_editor_options_and_more.py
games/templates/games/: about.html  index.html  search.html
