[tool.poetry]
name = "crousplay"
version = "0.1.0"
description = ""
authors = ["alexandreseris"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"


[tool.poetry.group.dev.dependencies]
django-stubs = { extras = ["compatible-mypy"], version = "^5.0.4" }
mypy = "^1.11.2"
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
check_untyped_defs = true

[tool.django-stubs]
django_settings_module = "crousplay.settings"

[tool.ruff]
line-length = 120
