[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "crousplay"
authors = [{ name = "Alexandre Seris" }]
description = "Appli web de recommandation de jeu de société "
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version"]
dependencies = ["Django==5.1.1"]


[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[project.optional-dependencies]
dev = ["mypy==1.11.2", "ruff==0.6.5", "django-stubs[compatible-mypy]==5.0.4"]


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
package-dir = { "" = "." }


[tool.mypy]
plugins = ["mypy_django_plugin.main"]
check_untyped_defs = true

[tool.django-stubs]
django_settings_module = "crousplay.settings"

[tool.ruff]
line-length = 120
